import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';
import { PracticeService } from './practice.service';

@Controller()
export class PracticeGrpcController {
  constructor(private readonly practiceService: PracticeService) {}

  // ==================== 练习会话管理 ====================

  @GrpcMethod('PracticeService', 'CreateSession')
  async createSession(data: {
    userId: string;
    mode: string;
    categoryId: string;
    questionIds: string[];
  }) {
    // TODO: 实现创建练习会话逻辑
    return {
      id: 'session_id',
      userId: data.userId,
      mode: data.mode,
      totalQuestions: data.questionIds.length,
      answeredQuestions: 0,
      correctCount: 0,
      correctRate: 0,
      status: 'active',
    };
  }

  @GrpcMethod('PracticeService', 'GetSession')
  async getSession(data: { sessionId: string }) {
    // TODO: 实现获取练习会话逻辑
    return {};
  }

  @GrpcMethod('PracticeService', 'UpdateProgress')
  async updateProgress(data: any) {
    // TODO: 实现更新答题进度逻辑
    return {};
  }

  @GrpcMethod('PracticeService', 'CompleteSession')
  async completeSession(data: { sessionId: string }) {
    // TODO: 实现完成练习会话逻辑
    return {};
  }

  // ==================== 6种练习模式 ====================

  @GrpcMethod('PracticeService', 'StartSequentialPractice')
  async startSequentialPractice(data: any) {
    // TODO: 顺序答题模式
    return {};
  }

  @GrpcMethod('PracticeService', 'StartRandomPractice')
  async startRandomPractice(data: any) {
    // TODO: 随机答题模式
    return {};
  }

  @GrpcMethod('PracticeService', 'StartSpecializedPractice')
  async startSpecializedPractice(data: any) {
    // TODO: 专项答题模式（按知识点）
    return {};
  }

  @GrpcMethod('PracticeService', 'StartTypePractice')
  async startTypePractice(data: any) {
    // TODO: 题型答题模式
    return {};
  }

  @GrpcMethod('PracticeService', 'StartFrequentErrorPractice')
  async startFrequentErrorPractice(data: any) {
    // TODO: 高频错题模式
    return {};
  }

  @GrpcMethod('PracticeService', 'StartChapterPractice')
  async startChapterPractice(data: any) {
    // TODO: 章节练习模式
    return {};
  }

  // ==================== 背题模式 ====================

  @GrpcMethod('PracticeService', 'StartMemorizeMode')
  async startMemorizeMode(data: any) {
    // TODO: 背题模式
    return {
      sessionId: '',
      questions: [],
    };
  }

  @GrpcMethod('PracticeService', 'MarkAsMastered')
  async markAsMastered(data: any) {
    // TODO: 标记已掌握
    return {
      success: true,
      message: '已标记为掌握',
    };
  }

  // ==================== 错题本管理 ====================

  @GrpcMethod('PracticeService', 'AddToWrongQuestions')
  async addToWrongQuestions(data: any) {
    // TODO: 添加到错题本
    return {};
  }

  @GrpcMethod('PracticeService', 'GetWrongQuestions')
  async getWrongQuestions(data: any) {
    // TODO: 获取错题列表
    return {
      wrongQuestions: [],
      total: 0,
      page: 1,
      limit: 10,
    };
  }

  @GrpcMethod('PracticeService', 'RemoveFromWrongQuestions')
  async removeFromWrongQuestions(data: any) {
    // TODO: 从错题本移除
    return {
      success: true,
      message: '已从错题本移除',
    };
  }

  @GrpcMethod('PracticeService', 'GetWrongQuestionStats')
  async getWrongQuestionStats(data: any) {
    // TODO: 错题统计
    return {
      totalCount: 0,
      knowledgePointStats: [],
      typeStats: [],
      reasonStats: [],
    };
  }

  // ==================== 收藏夹管理 ====================

  @GrpcMethod('PracticeService', 'CreateCollection')
  async createCollection(data: any) {
    // TODO: 创建收藏夹
    return {};
  }

  @GrpcMethod('PracticeService', 'AddToCollection')
  async addToCollection(data: any) {
    // TODO: 添加到收藏夹
    return {};
  }

  @GrpcMethod('PracticeService', 'RemoveFromCollection')
  async removeFromCollection(data: any) {
    // TODO: 从收藏夹移除
    return {
      success: true,
      message: '已从收藏夹移除',
    };
  }

  @GrpcMethod('PracticeService', 'GetCollections')
  async getCollections(data: any) {
    // TODO: 获取收藏夹列表
    return {
      collections: [],
      total: 0,
      page: 1,
      limit: 10,
    };
  }

  // ==================== 练习记录 ====================

  @GrpcMethod('PracticeService', 'GetPracticeHistory')
  async getPracticeHistory(data: any) {
    // TODO: 获取练习历史
    return {
      sessions: [],
      total: 0,
      page: 1,
      limit: 10,
    };
  }

  @GrpcMethod('PracticeService', 'GetPracticeStats')
  async getPracticeStats(data: any) {
    // TODO: 获取练习统计
    return {
      totalSessions: 0,
      totalQuestions: 0,
      totalCorrect: 0,
      overallCorrectRate: 0,
      dailyStats: [],
      modeStats: [],
    };
  }
}

